Fix many documentation based Issues (#3609)
* Move test.py from tests to testing. Fixes #3106

* Fix formula in docs and pycodestyle. Fixes #3189

* Fixes #3211 allowing generators to represent partitions

Update docs. Add tests of is_partition

* Improve docs for bipartite generator functions

Fixes #3324 including adding which nodes are created in each partition
add pycodestyle changes to bipartite generators

* Add documentation about normalization of betweenness_centrality_subset

Fixes #3481

--- a/networkx/tests/README
+++ b/networkx/tests/README
@@ -13,12 +13,9 @@ The simplest way is to import networkx and run the test() function.
 
 or::
 
-   python -c "import networkx; networkx.test()
+   python -c "import networkx; networkx.test()"
 
 If you have the source package and the nose testing package you
 can test the complete package from the unpacked source directory with::
 
    python setup_egg.py nosetests
-
-The python module benchmark.py can be used to compare relative speed of small
-code bits using the timeit module for different graph classes.
