Fix a few broken links in the html docs (#4572)
* Fix 3 broken refs in nxep2.

* Fix see also link to average_neighbor_degree.

* rm ref to neighbor_connectivity.

* Fix links to bipartite sets and is_bipartite from centrality.

* Fix links to square_clustering.

--- a/doc/developer/nxeps/nxep-0002.rst
+++ b/doc/developer/nxeps/nxep-0002.rst
@@ -16,10 +16,10 @@ Abstract
 Iterating over a subset of nodes or edges in a graph is a very common 
 operation in networkx analysis.
 The graph classes in NetworkX (e.g. :class:`~networkx.Graph`,
-:class:`~newtorkx.DiGraph`, :class:`~networkx.MultiGraph`, etc.) expose the
-node and edge data of the graph via :meth:`nodes` and :meth:`edges`, which 
-return dict view objects, `NodeView` (or `NodeDataView`) and `EdgeView` 
-(or `EdgeDataView`), respectively.
+:class:`~networkx.DiGraph`, :class:`~networkx.MultiGraph`, etc.) expose the
+node and edge data of the graph via :meth:`~networkx.Graph.nodes` and
+:meth:`~networkx.Graph.edges`, which return dict view objects, `NodeView`
+(or `NodeDataView`) and `EdgeView` (or `EdgeDataView`), respectively.
 The node and edge `View` classes have dict-like semantics for item access,
 returning the data dict corresponding to a given node or edge.
 This NXEP proposes adding support for slicing to the relevant node & edge
