--- a/doc/developer/nxeps/nxep-0003.rst
+++ b/doc/developer/nxeps/nxep-0003.rst
@@ -121,28 +121,28 @@ starting from an empty graph G:
 .. code-block:: python
 
     for C in edgelist:
-     if len(C) == 1:
-       if not hashable(C[-1]):
-         G.graph.update(C[-1])  # C[-1] is a dict of graph attributes
-       else:
-         G.add_node(C[-1])  # C[-1] is a node
-     elif len(C) == 2:
-       if not hashable(C[-1]):
-         G.add_node(C[0], **C[-1])  # C[-1] is a dict of node attributes
-       else:
-         G.add_edge(*C)  # C is a node-pair indicating an edge
-     elif len(C) == 3:
-       if not hashable(C[-1]):
-         G.add_edge(*C[:2], **C[-1])  # C -> (u, v, attrdict)
-       else:
-         G.add_edge(*C)  # C -> (u, v, edge_key)
-     elif len(C) == 4:
-         assert not hashable(C[-1])
-         G.add_edge(*C)  # C -> (u, v, edge_key, attr_dict)
-     else:
-         raise NetworkXInvalidEdgelist(
-             "no container in an edgelist should be larger than 4 objects."
-         )
+        if len(C) == 1:
+            if not hashable(C[-1]):
+                G.graph.update(C[-1])  # C[-1] is a dict of graph attributes
+            else:
+                G.add_node(C[-1])  # C[-1] is a node
+        elif len(C) == 2:
+            if not hashable(C[-1]):
+                G.add_node(C[0], **C[-1])  # C[-1] is a dict of node attributes
+            else:
+                G.add_edge(*C)  # C is a node-pair indicating an edge
+        elif len(C) == 3:
+            if not hashable(C[-1]):
+                G.add_edge(*C[:2], **C[-1])  # C -> (u, v, attrdict)
+            else:
+                G.add_edge(*C)  # C -> (u, v, edge_key)
+        elif len(C) == 4:
+            assert not hashable(C[-1])
+            G.add_edge(*C)  # C -> (u, v, edge_key, attr_dict)
+        else:
+            raise NetworkXInvalidEdgelist(
+                "no container in an edgelist should be larger than 4 objects."
+            )
 
 Usage and Impact
 ----------------
@@ -181,7 +181,7 @@ has underlying code that yields from an edgelist, or returns a graph.
 
     @graph_builder
     @py_random_state(4)
-    def extended_barabasi_albert_graph(n, m, p, q, seed=None)
+    def extended_barabasi_albert_graph(n, m, p, q, seed=None):
         # some fancy code that requires we construct G to use graph properties
         # while we decide what edges to add next.
         return G
@@ -249,16 +249,21 @@ Later generators could use `@node_and_edge_builder`.
         @wraps(f)
         def graph(*args, **kwargs):
             return nx.Graph(f(*args, **kwargs))
+
         def digraph(*args, **kwargs):
             return nx.DiGraph(f(*args, **kwargs))
+
         def multigraph(*args, **kwargs):
             return nx.MultiGraph(f(*args, **kwargs))
+
         def multidigraph(*args, **kwargs):
             return nx.MultiDiGraph(f(*args, **kwargs))
+
         def custom_graph(*args, create_using=None, **kwargs):
             g = create_using()
             g.update(f(*args, **kwargs))
             return g
+
         graph.Graph = graph
         graph.DiGraph = digraph
         graph.MultiGraph = multigraph
@@ -267,23 +272,28 @@ Later generators could use `@node_and_edge_builder`.
         graph.edgelist = f
         return graph
 
+
     def graph_builder(f):
         @wraps(f)
         def edgelist(*args, **kwargs):
             g = f(*args, **kwargs)
-            return itertools.ichain(
-                map(tuple, G.nodes.data()), map(tuple, G.edges.data())
-            )
+            return itertools.ichain(map(tuple, G.nodes.data()), map(tuple, G.edges.data()))
+
         f.edgelist = edgelist
         f.CustomGraph = f
+
         def graph(*args, **kwargs):
-            return f(*args, create_using=nx.Graph, **kwargs))
+            return f(*args, create_using=nx.Graph, **kwargs)
+
         def digraph(*args, **kwargs):
-            return f(*args, create_using=nx.DiGraph, **kwargs))
+            return f(*args, create_using=nx.DiGraph, **kwargs)
+
         def multigraph(*args, **kwargs):
-            return f(*args, create_using=nx.MultiGraph, **kwargs))
+            return f(*args, create_using=nx.MultiGraph, **kwargs)
+
         def multidigraph(*args, **kwargs):
-            return f(*args, create_using=nx.MultiDiGraph, **kwargs))
+            return f(*args, create_using=nx.MultiDiGraph, **kwargs)
+
         f.Graph = graph
         f.DiGraph = digraph
         f.MultiGraph = multigraph
@@ -307,6 +317,7 @@ Example developer usage:
     def path_graph(n):
         """an overly simplified path graph implementation"""
         return pairwise(range(n))
+
 
     @graph_builder
     def complete_graph(n, create_using=None):
